website/websites/u32q/code/knucleotide.2.jruby.log

Sat, 29 Mar 2014 17:44:28 GMT

MAKE:
mv knucleotide.jruby-2.jruby knucleotide.rb
0.01s to complete and log all make actions

COMMAND LINE:
/usr/local/src/jruby-1.7.11/bin/jruby -Xcompile.invokedynamic=true -J-server -J-Xmn512m -J-Xms2048m -J-Xmx2048m knucleotide.rb 0 < knucleotide-input250000.txt

PROGRAM FAILED 


PROGRAM OUTPUT:

SyntaxError: knucleotide.rb:37: syntax error, unexpected kWHILE
while (line !~ /^>/) & line do
     ^
